// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default assessments renders cognitive survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;

exports[`Default assessments renders personality results 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Results
  </div>
</div>
`;

exports[`Default assessments renders personality survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;

exports[`Default renders loading if not ready 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <img
      alt=""
      src="https://cdn.traitify.com/widgets/status/loading-sonar.gif"
    />
    <div
      className="bold p"
    >
      Loading your assessment
    </div>
  </div>
</div>
`;

exports[`Default renders results 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Results
  </div>
</div>
`;

exports[`Default renders survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;
